--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body style="display: flex; flex-direction: column; width: 200px;">
-    <div id="root" style="width: 100%; height: 150px"></div>
+  <body style="display: flex; flex-direction: column;">
+    <div id="root" style="width: calc(100% - 10px); height: 50vh"></div>
     <script type="module" src="./demo/main.tsx"></script>
   </body>
 </html>
